black widow change

--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -9,81 +9,22 @@
   tools:context=".MainActivity">
 
   <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/transcript"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    app:layout_constraintBottom_toTopOf="@id/message"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-  <EditText
-    android:id="@+id/message"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:hint="@string/messageHint"
-    android:importantForAutofill="no"
-    android:inputType="text"
-    app:layout_constraintBottom_toTopOf="@id/ultrasound"
-    app:layout_constraintEnd_toStartOf="@id/send"
-    app:layout_constraintStart_toStartOf="parent" />
-
-  <Button
-    android:id="@+id/send"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginBottom="4dp"
-    android:enabled="false"
-    android:text="@string/send"
-    app:layout_constraintBottom_toBottomOf="@id/message"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="@id/message" />
+      android:id="@+id/transcript"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   <androidx.appcompat.widget.SwitchCompat
-    android:id="@+id/recording"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:checked="false"
-    android:enabled="false"
-    android:text="@string/receive"
-    app:layout_constraintTop_toTopOf="@id/ultrasound"
-    app:layout_constraintEnd_toEndOf="parent" />
-
-  <androidx.appcompat.widget.SwitchCompat
-    android:id="@+id/oneShot"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:checked="false"
-    android:enabled="false"
-    android:text="@string/oneShot"
-    app:layout_constraintTop_toTopOf="@id/fast"
-    app:layout_constraintEnd_toEndOf="parent" />
-
-  <androidx.appcompat.widget.SwitchCompat
-    android:id="@+id/ultrasound"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:checked="false"
-    android:enabled="false"
-    android:text="@string/ultrasound"
-    app:layout_constraintBottom_toTopOf="@id/fast"
-    app:layout_constraintStart_toStartOf="parent" />
-
-  <androidx.appcompat.widget.SwitchCompat
-    android:id="@+id/fast"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:checked="false"
-    android:enabled="false"
-    android:text="@string/fast_mode"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+      android:id="@+id/recording"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:checked="false"
+      android:enabled="false"
+      android:text="@string/receive"
+      android:visibility="invisible"
+      app:layout_constraintEnd_toEndOf="parent"
+      tools:layout_editor_absoluteY="665dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
