--- a/demo/src/main/res/values/themes.xml
+++ b/demo/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources>
   <style name="Theme.GGWeb" parent="Theme.AppCompat">
-    <item name="colorPrimary">@color/primary</item>
-    <item name="colorPrimaryDark">@color/primary_dark</item>
+    <item name="colorPrimary">#70061C</item>
+    <item name="colorPrimaryDark">#C1490000</item>
     <item name="colorAccent">@color/accent</item>
   </style>
 </resources>
